--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "debug": "^2.6.3",
-    "koa": "^2.2.0",
     "jsonwebtoken": "^8.3.0",
-    "koa-jwt": "^3.3.2",
+    "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
     "koa-json": "^2.0.2",
+    "koa-jwt": "^3.3.2",
     "koa-logger": "^2.0.1",
+    "koa-multer": "^1.0.2",
     "koa-onerror": "^1.2.1",
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
